# SWORLDMODEL

./: .gitignore  ARCHITECTURE_ACTION_LAYER.md  ARCHITECTURE_AGENT_ENGINE.md  ARCHITECTURE_BEST_ACTION.md  ARCHITECTURE_MESSAGE_OPTIMIZER.md  ARCHITECTURE_PEAK.md  ARCHITECTURE_UNIFIED_WORLD_MODEL.md  ARCHITECTURE_WORLDMODEL.md  BACKTEST_FINDINGS.md  README.md  ROADMAP.md  SIMULATION_AUDIT.md  SOCIAL_WORLD_MODEL_DATA.md  SUPERFORECASTING.md  pyproject.toml
machine_learning/: .gitignore  README.md  __init__.py  canonical.py  config.py  conftest.py  io_utils.py  pipeline_runner.py  pyproject.toml  readiness.py  registry_io.py  report_builder.py  tasks.py
machine_learning/acquisition/: download.py  verify.py
machine_learning/acquisition/source_adapters/: base.py  git.py  hf.py  http.py
machine_learning/artifacts/manifests/: actor_choice_v1.summary.json  causal_intervention_v1.summary.json  cross_dataset_evaluation_v1.summary.json  long_horizon_behavior_v1.summary.json  population_response_v1.summary.json  social_interaction_v1.summary.json  unified_behavior_multitask_v1.summary.json
machine_learning/cli/: __init__.py  __main__.py  main.py
machine_learning/configs/sampling/: actor_choice_v1.yaml  causal_intervention_v1.yaml  cross_dataset_evaluation_v1.yaml  long_horizon_behavior_v1.yaml  population_response_v1.yaml  social_interaction_v1.yaml  unified_behavior_multitask_v1.yaml
machine_learning/configs/training/: 8b_actor_choice.yaml  8b_causal_intervention.yaml  8b_long_horizon.yaml  8b_population_response.yaml  8b_social_interaction.yaml  8b_unified_multitask.yaml  tiny_smoke_test.yaml
machine_learning/docs/: acquisition_guide.md  architecture.md  colab_guide.md  evaluation_guide.md  gpu_setup_guide.md  integration_contract.md  leakage_prevention_guide.md  licensing_guide.md  normalization_guide.md  persistent_gpu_server_guide.md  reproduction_guide.md  schema_guide.md  training_guide.md  troubleshooting_guide.md
machine_learning/evaluation/: baselines.py  belief_change.py  causal.py  messages.py  metrics.py  model_eval.py  next_action.py  population.py  reports.py  timing.py  trajectories.py
machine_learning/examples/formatters/: sft.py
machine_learning/normalization/: base.py  pipeline.py
machine_learning/normalization/common/: dialogue.py  parquet_io.py  pseudonymize.py
machine_learning/normalization/converters/: abcd.py  behaviorbench.py  casino.py  craigslistbargain.py  criteo_uplift.py  dealornodeal.py  debate.py  kuairand.py  mirobench.py  omnibehavior.py  open_bandit.py  opera.py  persuasionforgood.py  psych101.py  simbench.py  socsci210.py  some.py  surge.py  upworthy.py  werewolf.py
machine_learning/registry/: datasets.yaml  field_mappings.yaml  licenses.yaml  task_taxonomy.yaml  training_approvals.yaml
machine_learning/reports/acquisition/: abcd.json  behaviorbench.json  (+12 more)
machine_learning/requirements/: base.txt  data.txt  training.txt
machine_learning/sampling/: balanced_sampler.py  manifests.py
machine_learning/schemas/: canonical_behavior_event.schema.json
machine_learning/scripts/: acquire_batch.py  build_review_site.py  finalize_datasets.py
machine_learning/splitting/: leakage_checks.py  policies.py
machine_learning/training/: checkpointing.py  collators.py  loss_masking.py  model_registry.py  resume.py  smoke.py  train_qlora.py
machine_learning/validation/: __init__.py  chronology.py  deduplication.py  distributions.py  leakage.py  licensing.py  orchestrator.py  provenance.py  schema_validation.py
(+8841 files in other folders)
