[project]
name = "sworldmodel"
version = "0.0.1"
description = "A social world model, built evaluation-first: calibrated, backtested, partially-observed prediction of social responses."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []   # core metrics/schema are dependency-free on purpose; add ML deps per module

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["swm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
