[project]
name = "sworldmodel"
version = "0.0.1"
description = "A social world model, built evaluation-first: calibrated, backtested, partially-observed prediction of social responses."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []   # core swm/ library is dependency-free on purpose

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29", "anthropic>=0.40"]
dev = ["pytest>=7", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["swm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
